Add projects page and resume

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <title>Steven Dyer</title> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" href="../styles/main.css" /> 
-    <link rel="stylesheet" href="../styles/index.css" /> 
+    <link rel="stylesheet" href="../styles/index.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
-</script> 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></script> 
 
 <!-- Load header and footer -->
     <script>
@@ -42,7 +41,7 @@
                     Mechatronics Engineering Student
                 </div> 
                 <div class="text-white">
-                    I am a mechatronics engineering student attending Memorial University of Newfoundland, expecting to graduate in May 2028. I have a strong interest in robotics, embedded systems, and firmware development. I develop firmware for various student design teams, personal projects, and through my professional work.
+                    I am a mechatronics engineering student attending Memorial University of Newfoundland, expecting to graduate in May 2028. I have a strong interest in robotics, embedded software, and firmware development. I develop embedded software and firmware for various student design teams and personal projects.
                 </div> 
             </div> 
         </div> 
@@ -133,10 +132,10 @@
                             <a href="https://www.linkedin.com/company/memorialbaja/posts/?feedView=all" class="experience-title">Memorial Baja - Electronics Team Member</a>
                         </div>
                         <div class="experience-date">St. John's, NL · Sept 2023 - Present</div>
-                        <div class="experience-desc">Memorial Baja is a student design team building an single-seat off-road Baja SAE racing vehicle. The team is currently preparing to compete in the Baja SAE competion in 2026. As an electronics team member, I contribute to the development of all electronic systems on the vehicle:
+                        <div class="experience-desc">Memorial Baja is a student design team building a single-seat off-road Baja SAE racing vehicle. The team is currently preparing to compete in the Baja SAE Ohio competition in 2026. As an electronics team member, I contribute to the development of all electronic systems on the vehicle:
                             <ul>
-                                <li>Implemented a hall effect sensor program using FreeRTOS on a ESP32 microcontroller to read the RPM of a Baja SAE vehicle and display data onto a digital dashboard.</li>
-                                <li>Performed testing and troubleshooting of electronic systems using multimeters, oscilloscopes, and logic analyzers, ensuring accurate sensor readings.</li>
+                                <li>Developed ESP32 firmware using C to measure the drive shaft RPM from hall effect sensor data and establish communication to an onboard table via BLE to display RPM.</li>
+                                <li>Tested and troubleshooted the hall effect sensor using multimeters and oscilloscopes ensuring accurate sensor readings.</li>
                             </ul>
                         </div>
                     </div>
