--- a/index.html
+++ b/index.html
@@ -168,5 +168,8 @@
 <div id="footer-placeholder"></div> 
 
 <script src="../main.js"></script>
+
+<!-- Bootstrap JS (required for hamburger) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
