Fix: updated resume and spelling errors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <ul class="fw-bold fs-6 mt-2" style="list-style-position: inside; padding-left: 0;"> 
                             <li>Software Team Lead for Paradigm Engineering</li> 
                             <li>Electronics Team Member for Memorial Baja</li> 
-                            <li>Co-Class Representitive for MUN Mechatronics 2028</li> 
+                            <li>Co-Class Representative for MUN Mechatronics 2028</li> 
                             <li>PEGNL Engineering Scholarship</li>
                             <li>Ray Bonia Memorial Scholarship</li>
                             <li>Cori Brown Memorial Award</li> 
@@ -92,10 +92,10 @@
                     <img src="public/michelin.png" alt="Michelin" class="experience-img"> 
                     <div class="experience-title"> 
                         <a href="https://www.michelin.ca/" class="experience-title">Michelin - Electrical Engineering Intern</a> </div> 
-                        <div class="experience-date">Waterville, NS · Jan 2025 - Apr 2025, Sept 2025 - Dec 2025</div> 
-                        <div class="experience-desc"> Michelin is a global leader in the automitve industry and tire manufacturing. As an electrical engineering intern, I worked with the Innovation team on implementing new technologies into the tire manufactuering process. My work included: 
+                        <div class="experience-date">Waterville, NS · Jan - Apr 2025, Sept - Dec 2025</div> 
+                        <div class="experience-desc"> Michelin is a global leader in the automotive industry and tire manufacturing. As an electrical engineering intern, I worked with the Innovation team on implementing new technologies into the tire manufacturing process. My work included: 
                             <ul>
-                                <li>Developed firmware for a new standards training lab on a ESP32 microcontroller using C to establish I2C and UART communication drivers to several sensors.</li> 
+                                <li>Developed C firmware for a new standards training lab on an ESP32 microcontroller, including I2C and UART drivers for proximity and barometric pressure sensors.</li> 
                                 <li>Led a team of four technicians to install a new energy monitoring device by first drafting all necessary electrical schematics and writing PLC ladder logic, resulting in improved energy trend tracking.</li>
                                 <li>Fine-tuned a Gocator 3D sensor via built-in emulation software, enhancing the automated quality inspection system and improving dimensional measurement accuracy by 60%.</li>
                                 <li>Designed and proposed a closed-loop control system to enhance temperature regulation for a tire membrane test bed’s heating element, including the full schematic design in DraftSight.</li> 
@@ -112,11 +112,11 @@
                             <a href="https://munparadigm.com/" class="experience-title">Paradigm Engineering - Software Team Lead</a> 
                         </div> 
                         <div class="experience-date">St. John's, NL · Aug 2025 - Present</div> 
-                        <div class="experience-desc"> Paradigm Engineering is the largest design and competition team at the Memorial University of Newfoundland. The team has competed at the SpaceX Hyperloop Pod Competitions, The Boring Company's 'Not-a-Boring' competition, the Intelligent Ground Vehicle competition, and the Autonomous Karting Series. Paradigm is gearing up to compete in the Autonomous Karting Series in 2026, creating a fully autonomous, self-driving go-kart: 
+                        <div class="experience-desc"> Paradigm Engineering is the largest design and competition team at Memorial University of Newfoundland. The team has competed at the SpaceX Hyperloop Pod competition, The Boring Company's 'Not-a-Boring' competition, the Intelligent Ground Vehicle competition, and the Autonomous Karting Series. Paradigm is gearing up to return to the Autonomous Karting Series in 2026, creating a fully autonomous, self-driving go-kart: 
                             <ul>
-                                <li>Wrote on board firmware, including low-level drivers for CAN, UART, and PWM, using C on a STM32G4 microcontroller to facilitate communication between a Jetson Orin, a Pixhawk 6C, and several motors.</li> 
+                                <li>Wrote onboard firmware, including low-level drivers for CAN, UART, and PWM, using C and FreeRTOS on an STM32G4 microcontroller to facilitate communication between a Jetson Orin, a Pixhawk 6C, and several motors.</li> 
                                 <li>Developed a computer vision system using a ZED 2i Stereo Camera and PyTorch, implementing a CNN to detect white lines on the race track, enabling autonomous navigation.</li> 
-                                <li>Designed the software architecture of an autonomous go-kart which achieved second place at the 2025 Autonomous Karting Series national grand-prix.</li> 
+                                <li>Designed the software architecture of an autonomous go-kart which achieved second place at the 2025 Autonomous Karting Series National Grand Prix.</li> 
                                 <li>Led and mentored software team by preparing onboarding resources, documentation, and task assignments, resulting in significant contributions and experience-gain by 10+ members.</li>
                             </ul>
                         </div>
@@ -134,7 +134,7 @@
                         <div class="experience-date">St. John's, NL · Sept 2023 - Present</div>
                         <div class="experience-desc">Memorial Baja is a student design team building a single-seat off-road Baja SAE racing vehicle. The team is currently preparing to compete in the Baja SAE Ohio competition in 2026. As an electronics team member, I contribute to the development of all electronic systems on the vehicle:
                             <ul>
-                                <li>Developed ESP32 firmware using C to measure the drive shaft RPM from hall effect sensor data and establish communication to an onboard table via BLE to display RPM.</li>
+                                <li>Developed C firmware for an ESP32 microcontroller to measure the drive shaft RPM from hall effect sensor data and establish communication to a digital dashboard via BLE to display RPM.</li>
                                 <li>Tested and troubleshooted the hall effect sensor using multimeters and oscilloscopes ensuring accurate sensor readings.</li>
                             </ul>
                         </div>
@@ -149,12 +149,12 @@
                         <div class="experience-title">
                             <a href="https://www.technipfmc.com/" class="experience-title">TechnipFMC - Project Engineering Intern</a>
                         </div>
-                        <div class="experience-date">St. John's, NL · May 2024 - Aug 2024</div>
-                        <div class="experience-desc"> TechnipFMC is a global energy company that provides technolgies, project management, and engineering services to the oil, gas, and broader energy industry. As a project engineering intern, I worked with the Project Engineering department assisting in the execution of large-scale subsea projects. My work included:
+                        <div class="experience-date">St. John's, NL · May - Aug 2024</div>
+                        <div class="experience-desc"> TechnipFMC is a global energy company that provides technologies, project management, and engineering services to the oil, gas, and broader energy industry. As a project engineering intern, I worked with the Project Engineering department assisting in the execution of large-scale subsea projects. My work included:
                             <ul>
-                                <li>Managed master equipment certification folder using Excel to streamline data retrieval for audits and inspection.</li>
+                                <li>Managed master equipment certification folder using Excel to streamline data retrieval for audits and inspections.</li>
                                 <li>Conducted site inspections to monitor subsea project progress and ensure compliance with quality standards.</li>
-                                <li>Performed calculations on reel lift rigging assembly using knowledge of statics to ensure the assembly can tolerate expected loads.</li>
+                                <li>Performed calculations on a reel lift rigging assembly using knowledge of statics to ensure the assembly can tolerate expected loads.</li>
                             </ul>
                         </div>
                     </div>
