Fix: minor spelling mistakes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             Bachelor of Mechatronics Engineering
                         </div> 
                         <div class="text-primary fw-bold fs-6 mb-2">
-                            GPA: 3.75/4.0
+                            GPA: 3.75/4.00
                         </div> 
                         <ul class="fw-bold fs-6 mt-2" style="list-style-position: inside; padding-left: 0;"> 
                             <li>Software Team Lead for Paradigm Engineering</li> 
@@ -96,7 +96,7 @@
                         <div class="experience-desc"> Michelin is a global leader in the automotive industry and tire manufacturing. As an electrical engineering intern, I worked with the Innovation team on implementing new technologies into the tire manufacturing process. My work included: 
                             <ul>
                                 <li>Developed C firmware for a new standards training lab on an ESP32 microcontroller, including I2C and UART drivers for proximity and barometric pressure sensors.</li> 
-                                <li>Led a team of four technicians to install a new energy monitoring device by first drafting all necessary electrical schematics and writing PLC ladder logic, resulting in improved energy trend tracking.</li>
+                                <li>Led a team of four technicians to install a new energy monitoring device by drafting all necessary electrical schematics and writing PLC ladder logic, resulting in improved energy trend tracking.</li>
                                 <li>Fine-tuned a Gocator 3D sensor via built-in emulation software, enhancing the automated quality inspection system and improving dimensional measurement accuracy by 60%.</li>
                                 <li>Designed and proposed a closed-loop control system to enhance temperature regulation for a tire membrane test bed’s heating element, including the full schematic design in DraftSight.</li> 
                             </ul> 
@@ -132,7 +132,7 @@
                             <a href="https://www.linkedin.com/company/memorialbaja/posts/?feedView=all" class="experience-title">Memorial Baja - Electronics Team Member</a>
                         </div>
                         <div class="experience-date">St. John's, NL · Sept 2023 - Present</div>
-                        <div class="experience-desc">Memorial Baja is a student design team building a single-seat off-road Baja SAE racing vehicle. The team is currently preparing to compete in the Baja SAE Ohio competition in 2026. As an electronics team member, I contribute to the development of all electronic systems on the vehicle:
+                        <div class="experience-desc">Memorial Baja is a student design team building a single-seat off-road Baja SAE racing vehicle. The team is preparing to compete in the Baja SAE Ohio competition in 2026. As an electronics team member, I contribute to the development of all electronic systems on the vehicle:
                             <ul>
                                 <li>Developed C firmware for an ESP32 microcontroller to measure the drive shaft RPM from hall effect sensor data and establish communication to a digital dashboard via BLE to display RPM.</li>
                                 <li>Tested and troubleshooted the hall effect sensor using multimeters and oscilloscopes ensuring accurate sensor readings.</li>
